Central: Set select2 width to avoid overlap (#1080)

--- a/public_html/wp-content/themes/wordcamp-central-2012/style.css
+++ b/public_html/wp-content/themes/wordcamp-central-2012/style.css
@@ -2123,6 +2123,10 @@ li:after { content: "."; display: block; height: 0; clear: both; visibility: hid
 	font-weight: 400;
 }
 
+.report-form .field_wordcamp-id .select2-container {
+	width: 100% !important;
+}
+
 .report-results {
 	border-radius: 3px;
 	border: 1px #c6c6c6 solid;
